// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea TextArea normal 1`] = `
.c0.textArea {
  box-sizing: border-box;
  width: calc(12 / var(--ncols) * 100%);
  line-height: 1.5;
  font-size: var(--font-size-3);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  padding: 10px 14px;
  resize: none;
}

.c0.textArea:focus {
  background-color: #fff;
  box-shadow: 0 0 0 4px rgba(0,132,255,0.5);
  outline: 0;
}

.c0.textArea::-webkit-input-placeholder {
  color: #8e8e8e;
}

.c0.textArea::-moz-placeholder {
  color: #8e8e8e;
}

.c0.textArea:-ms-input-placeholder {
  color: #8e8e8e;
}

.c0.textArea::placeholder {
  color: #8e8e8e;
}

.c0.normal {
  border-color: #8e8e8e;
}

.c0.errored {
  border-color: #e3780c;
}

.c0.enabled {
  color: var(--darkGray);
  background-color: var(--white);
  cursor: text;
}

.c0.disabled {
  color: var(--darkGray);
  background-color: var(--lightGray);
}

<span>
  <textarea
    aria-invalid="false"
    className="textArea enabled normal c0"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with error 1`] = `"<span><textarea class=\\"textArea enabled errored sc-bxivhb iwkGyk\\" aria-invalid=\\"true\\" id=\\"test\\" rows=\\"3\\"></textarea></span>"`;

exports[`TextArea TextArea with hasError 1`] = `"<span><textarea class=\\"textArea enabled errored sc-bxivhb iwkGyk\\" aria-invalid=\\"true\\" id=\\"test\\" rows=\\"3\\"></textarea></span>"`;

exports[`TextArea TextArea with rows 1`] = `
.c0.textArea {
  box-sizing: border-box;
  width: calc(12 / var(--ncols) * 100%);
  line-height: 1.5;
  font-size: var(--font-size-3);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  padding: 10px 14px;
  resize: none;
}

.c0.textArea:focus {
  background-color: #fff;
  box-shadow: 0 0 0 4px rgba(0,132,255,0.5);
  outline: 0;
}

.c0.textArea::-webkit-input-placeholder {
  color: #8e8e8e;
}

.c0.textArea::-moz-placeholder {
  color: #8e8e8e;
}

.c0.textArea:-ms-input-placeholder {
  color: #8e8e8e;
}

.c0.textArea::placeholder {
  color: #8e8e8e;
}

.c0.normal {
  border-color: #8e8e8e;
}

.c0.errored {
  border-color: #e3780c;
}

.c0.enabled {
  color: var(--darkGray);
  background-color: var(--white);
  cursor: text;
}

.c0.disabled {
  color: var(--darkGray);
  background-color: var(--lightGray);
}

<span>
  <textarea
    aria-invalid="false"
    className="textArea enabled normal c0"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    rows={5}
  />
</span>
`;
